--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,10 +5,11 @@
 @import 'motion-ui';
 
 @include foundation-global-styles;
-//@include foundation-grid;
-// @include foundation-flex-grid;
-@include foundation-xy-grid-classes;
-@include foundation-typography;
+@include foundation-grid;
+@include foundation-flex-grid;
+@include flex;
+//@include foundation-xy-grid-classes;
+//@include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
 // @include foundation-range-input;
@@ -28,7 +29,7 @@
 @include foundation-responsive-embed;
 @include foundation-label;
 @include foundation-media-object;
-@include foundation-off-canvas;
+//@include foundation-off-canvas;
 @include foundation-orbit;
 @include foundation-pagination;
 @include foundation-progress-bar;
@@ -53,3 +54,71 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+@import url('https://fonts.googleapis.com/css?family=Lato:900');
+
+.out {
+    outline: 2px red solid
+}
+// main sections
+
+body {
+    overflow: hidden;
+}
+
+main#hero {
+	background-image: url("../img/leather-bakgrund-min.jpg");
+	height: 100vh;
+	width:100vw;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      -webkit-box-align: center;
+} 
+
+
+// type
+
+h1 {
+ 	font-family: 'Lato', sans-serif;
+    font-weight: bolder;
+    color: #fff;
+    font-size: 40px;
+    line-height: 1.7;
+    margin: 50px auto;
+    text-align: center;
+    text-transform: uppercase;
+
+        
+        @include breakpoint(small only) {
+            margin: 20px auto;
+			font-size: 26px;
+			line-height: 1.4;
+		}
+}
+
+
+h2 {
+  @extend h1;
+    font-size: 20px;
+        
+        @include breakpoint(small only) {
+            font-size: 16px;
+            line-height: 1.4;
+        }
+}
+
+
+
+
+// media, images
+
+.contira-logo {
+    margin: 0 auto;
+    padding: 10px;
+    display: block;
+    clear: both;
+}
