--- a/scss/app.scss
+++ b/scss/app.scss
@@ -63,13 +63,13 @@
 // main sections
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 main#hero {
 	background-image: url("../img/leather-bakgrund-min.jpg");
 	height: 100vh;
-	width:100vw;
+	width:100%;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
@@ -80,6 +80,34 @@ main#hero {
 } 
 
 
+
+
+// links
+
+
+a:link {
+    color: #222;
+    text-decoration: none;
+
+} 
+a:visited {
+    color: #ddd;
+    text-decoration: none;
+}
+a:hover {
+    background-color: #000;
+    color: #777;
+    -webkit-transition: background-color .5s ease-out;
+    -moz-transition: background-color .5s ease-out;
+    -o-transition: background-color .5s ease-out;
+    transition: background-color .5s ease-out;
+}
+
+
+
+
+
+
 // type
 
 h1 {
@@ -88,29 +116,34 @@ h1 {
     color: #fff;
     font-size: 40px;
     line-height: 1.7;
-    margin: 50px auto;
+    margin: 50px;
+    padding-bottom: 40px;
     text-align: center;
     text-transform: uppercase;
+    letter-spacing: 2px;
 
         
         @include breakpoint(small only) {
             margin: 20px auto;
-			font-size: 26px;
-			line-height: 1.4;
-		}
+            font-size: 26px;
+            line-height: 1.4;
+        }
 }
 
 
 h2 {
   @extend h1;
     font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: none;
+    padding: 0 25px;
+    font-weight: 300;
         
         @include breakpoint(small only) {
             font-size: 16px;
             line-height: 1.4;
-        }
+    }
 }
-
 
 
 
@@ -122,3 +155,38 @@ h2 {
     display: block;
     clear: both;
 }
+
+
+footer {
+    background-image: url("img/footer_bg.jpg");
+    background-repeat: repeat;
+    min-height: 300px;
+    width:80%;
+    padding: 20px 0;
+    margin: 0 auto;
+    @include horizontal-center;
+
+
+    h1 {
+        @extend h1;
+        color: #222;
+        text-transform: uppercase;
+    }
+    @include breakpoint(small only) {
+        font-size: 16px;
+        line-height: 1.4;
+        text-align: center;
+
+    }
+    h4 {
+        text-align: center;
+    }
+    .logo {
+        margin: 10px auto;
+        display: block;
+    }
+
+}
+    .xtra-padding {
+        padding-bottom: 20px;
+    }
